Home page and top bar

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -9,7 +9,7 @@
         <!--
         - # top app bar
         -->
-        <%- include('../partials/top_bar') %>
+        <%- include('../partials/top_bar', locals.currentProfile) %>
         <% console.log(locals.currentProfile) %>
 
     </article>
