--- a/public/css/base.css
+++ b/public/css/base.css
@@ -7,7 +7,7 @@
 */
 
 /*-------------------------*\
-#BASE
+# BASE
 \*-------------------------*/
 
 .wrapper {
@@ -24,4 +24,22 @@ body {
     line-height: var(--lh-base);
     height: 100vh;
     height: 100dvh;
+}
+
+input {
+    caret-color: var(--primary);
+}
+
+input::placeholder {
+    color: var(--placeholder-color);
+}
+
+input[type='search']::-webkit-search-cancel-button {
+    display: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:where(:hover, :focus, :active) {
+    -webkit-box-shadow: inset 0 0 0 30px var(--autofill-bg) !important;
+    -webkit-text-fill-color: var(--autofill-color) !important;
 }
